# stream-chat

./: Cargo.toml  README.md  config.toml
migrations/: 20230510214300_init_events_table.sql
src/: config.rs  console_dest.rs  dest_console.rs  dest_sqlite.rs  dest_termjs.rs  dest_termjs_index.html  dest_termjs_index.js  dest_web.rs  dest_web_index.html  dest_web_index.js  destination.rs  main.rs  middleware_cmd.rs  source.rs  sqlite.rs  src_dummy.rs  src_irc.rs  src_stdin.rs  src_twitch.rs  src_yt.rs  yt.rs
