[package]
name = "stream-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.15"
chrono = "0.4.24"
colored = "2.0.0"
demoji = "0.0.3"
futures = "0.3.28"
irc = "0.15.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.95"
tokio = { version = "1.25.0", features = ["full"]}
twitchchat = { git = "https://github.com/museun/twitchchat", version = "0.14.8", features = ["async", "tokio", "tokio-util"] }
youtube_chat = "0.1.4"
