[package]
name = "stream-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.15"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
demoji = "0.0.3"
futures = "0.3.28"
irc = "0.15.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.95"
tokio = { version = "1.25.0", features = ["full"]}
toml = "0.7.3"
# until the next version is released (after 0.14.8)
# because we need compability with new tokio verson
twitchchat = { git = "https://github.com/museun/twitchchat", version = "0.14.8", features = ["async", "tokio", "tokio-util"] }
xdg = "2.5.0"
youtube_chat = "0.1.4"
