[package]
name = "stream-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.15"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
demoji = "0.0.3"
futures = "0.3.28"
irc = "0.15.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
strum_macros = "0.24.3"
tokio = { version = "1.25.0", features = ["full", "io-std"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
toml = "0.7.3"
# until the next version is released (after 0.14.8)
# because we need compability with new tokio verson
twitchchat = { git = "https://github.com/museun/twitchchat", version = "0.14.8", features = ["async", "tokio", "tokio-util"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
xdg = "2.5.0"
youtube_chat = "0.1.4"


[profile.dev.package.sqlx-macros]
opt-level = 3
